[package]
name = "aptos-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
aptos-cached-packages = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.1.0" }
aptos-config = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.1.0" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.0.3", features = ["cloneable-private-keys", "fuzzing"] }
aptos-genesis = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.1.0" }
aptos-keygen = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.1.0" }
aptos-logger = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.1.0" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.0.3" }
aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core", rev = "a52efba0f43342f654ed5ed861da2570ea77f218", version = "0.1.0" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
clap = { version = "4.3.9", features = ["derive", "unstable-styles"] }
rand = "0.7.3"
serde_yaml = "0.8.24"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos-cached-packages = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
aptos-config = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
aptos-crypto = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
aptos-genesis = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
aptos-keygen = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
aptos-logger = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
aptos-types = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
aptos-vm-genesis = { git = "https://github.com/lebdron/aptos-core", rev = "9ab1b13e1751198c92969f15eb6affa7aaac5fd1" }
