[package]
name = "aptos-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
aptos-cached-packages = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.1.0" }
aptos-config = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.1.0" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.0.3", features = ["cloneable-private-keys", "fuzzing"] }
aptos-genesis = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.1.0" }
aptos-keygen = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.1.0" }
aptos-logger = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.1.0" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.0.3" }
aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core", rev = "b98e6b99260181e9efb3f65af1b15e6e043e0d30", version = "0.1.0" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
clap = { version = "4.3.9", features = [
    "derive",
    "env",
    "unstable-styles",
    "wrap_help",
] }
rand = "0.7.3"
serde_yaml = "0.8.24"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos-cached-packages = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
aptos-config = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
aptos-crypto = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
aptos-genesis = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
aptos-keygen = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
aptos-logger = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
aptos-types = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
aptos-vm-genesis = { git = "https://github.com/lebdron/aptos-core", rev = "97e5f4584c758a5379955f09d2e0aabc819b8396" }
